--- a/wwwroot/default/index.html
+++ b/wwwroot/default/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
   <title>Welcome to LNMP-DOCKER</title>
+  <meta charset="utf-8">
 </head>
 
 <body>
